# Top-Ten-Soccer-Players

./: README.md  main.py  pyproject.toml  top_ten_soccer_players.csv
