[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "top-ten-soccer-players"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
lxml = "^4.5"
pandas = "^1.0"
python = "^3.8"
[tool.poetry.dev-dependencies]
